# xcode-color-assets

./: .gitignore  Cargo.toml  Package.resolved  Package.swift  README.md
.circleci/: config.yml
.github/workflows/: test.yml
Sources/AssetCatalogGenerator/: AssetCatalogGenerator.swift
Sources/ColorConfigParser/: Document.swift  Parser.swift  VariableContext.swift
Sources/XcodeColorAssets/: Document.swift  Parser.swift  main.swift
XcodeColorAssets.playground/: Contents.swift
asset-catalog/: Cargo.toml
asset-catalog/src/: asset_catalog.rs  color_space.rs  error.rs  lib.rs
asset-catalog/tests/: asset_catalog.rs
crates/asset-catalog/src/: color_space.rs
crates/parser/src/: ast.rs  error.rs  var_context.rs
crates/swift-gen/: Cargo.toml
crates/swift-gen/src/: error.rs  lib.rs
crates/swift-gen/tests/: swift_gen.rs
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lib.rs  parser.rs  var_context.rs
parser/tests/: parser.rs
parser/tests/snapshots/: parser__color_sets.snap  parser__color_variables_2.snap  parser__color_variables_4.snap  parser__color_variables_5.snap  parser__comments_2.snap  parser__comments_5.snap  parser__comments_9.snap  parser__document.snap  parser__empty_ruleset_1.snap  parser__empty_ruleset_2.snap  parser__garbage_doc_1.snap  parser__garbage_doc_2.snap  (+18 more)
src/: asset_catalog.rs  ast.rs  gen_swift.rs  main.rs  parser.rs
src/snapshots/: tests__test_document.snap  tests__test_ruleset.snap
swift-gen/: Cargo.toml
swift-gen/src/: error.rs  lib.rs  swift_gen.rs
swift-gen/tests/: swift_gen.rs
xcode-color-assets/: Cargo.toml
xcode-color-assets/src/: main.rs
(+83 files in other folders)
